--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   },
   "devDependencies": {
     "eslint": "^8.17.0",
-    "eslint-config-airbnb": "^19.0.4"
+    "eslint-config-standard": "^17.0.0"
   }
 }
