--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tokenquote": "bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "eslint": "^8.17.0",
-    "eslint-config-standard": "^17.0.0"
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-jest": "^26.4.6",
+    "jest": "^28.1.0"
   }
 }
